--- a/views/assets/css/campanias.css
+++ b/views/assets/css/campanias.css
@@ -62,6 +62,16 @@
     filter: brightness(85%);
 }
 
+.btn-success{
+    background-color: #bcc9b8 !important;
+    border-color: #bcc9b8 !important;
+    border-radius: 45px !important;
+    font-size: 30px !important; 
+    font-weight: bold !important;
+    padding-left: 50px !important;
+    padding-right: 50px !important;
+}
+
 .Opciones {
     border: none !important;
     background: none !important;
@@ -69,4 +79,8 @@
 
 .Opciones:hover{
     filter: brightness(85%);
+}
+
+.containerD{
+    max-width: 900px !important;
 }
