--- a/views/assets/css/registro.css
+++ b/views/assets/css/registro.css
@@ -19,7 +19,7 @@ form {
     border-radius: 20px;
 }
 
-.btn-primary{
+.btn-success{
     background-color: #bcc9b8; 
     border: #bcc9b8;
     color: #827a6f;
