--- a/views/assets/css/confirmarDenuncia.css
+++ b/views/assets/css/confirmarDenuncia.css
@@ -4,7 +4,12 @@ body, html {
     padding: 0;
     overflow-x: hidden;
 }
-
+footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
 #FORM {
     margin-left: 136px;
     padding-left: 0px;
@@ -34,6 +39,7 @@ body, html {
     color: white;
     z-index: 1000;
 }
+
 
 .container {
     background-color: rgb(209, 196, 196);
