--- a/views/assets/css/mensajeria.css
+++ b/views/assets/css/mensajeria.css
@@ -7,7 +7,7 @@ body {
 }
 
 
-.container-fluid {
+#contenedor {
     flex: 1;
     margin: 0;
     padding: 0;
@@ -18,7 +18,7 @@ h3 {
 }
 
 /* aside */
-.col-md-3 {
+#aside {
     position: sticky;
     top: 0;
     height: 100vh; 
@@ -26,8 +26,8 @@ h3 {
 }
 
 /* header msj*/
-header {
-    position: relative;
+#msjHeader {
+    position: sticky;
     top: 0;
     background-color: #916a53; 
     z-index: 1000; /* por encima del contenido desplazable */
@@ -42,19 +42,9 @@ header {
     z-index: 1000; 
 }
 
+/*Cada chat dentro del aside*/
 .nav-link {
     color: #616d63;
-}
-
-.nav-link.active {
-    background-color: #B1B2B5;
-    color: #616d63; 
-}
-
-.container-fluid .navbar .container-fluid {
-    display: flex;
-    align-items: center;
-    padding: 0;
 }
 
 #usuarioActual {
@@ -97,9 +87,9 @@ header {
     text-align: justify;
 }
 
-/*Color del usaurio cuando está seleciconado*/
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
-    background-color: #648f7bcc;
+/*Color del usuario cuando está seleciconado*/
+.nav-pills .nav-link.active {
+    background-color: #b5c5be;
 }
 
 #iniciarChat{
