--- a/views/assets/css/confDenuncia.css
+++ b/views/assets/css/confDenuncia.css
@@ -4,40 +4,19 @@ body, html {
     padding: 0;
     overflow-x: hidden;
 }
-footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-}
+
 #FORM {
     margin-left: 136px;
     padding-left: 0px;
 }
 
-.mainHeader {
-    position: fixed;
-    width: 100%;
-    background-color: #333;
-    padding: 0px 0;
-    z-index: 1000;
-}
 
 .container_label {
     background-color: #8b9e8f;
-    position: fixed;
-    width: auto;
-    height: 50px;
     border-bottom-right-radius: 100px;
-    font-size: 120%;
-    font-weight: bold;
-    margin: 0;
     padding: 10px 20px;
-    left: 0;
-    top: 81px;
     text-align: center;
     color: white;
-    z-index: 1000;
 }
 
 
@@ -47,8 +26,9 @@ footer{
     padding: 20px;
     width: 65%; 
     max-width: calc(100% - 136px); /* Ajusta el ancho máximo según el margen izquierdo */
-    margin: 119px 0px -37px 136px; 
     padding-right: 0px;
+    margin: 1%;
+    margin-left: 18%;
 }
 
 .btn_enviar {
