--- a/views/assets/css/verTYC.css
+++ b/views/assets/css/verTYC.css
@@ -5,45 +5,24 @@ body, html {
     overflow-x: hidden;
 }
 
-#FORM {
-    margin-left: 136px;
-    padding-left: 0px;
-}
-
-.mainHeader {
-    position: fixed;
-    width: 100%;
-    background-color: #BCC9B8;
-    padding: 0px 0;
-    z-index: 1000;
-}
-
 .container_label {
     background-color: #8b9e8f;
-    position: fixed;
-    width: auto;
-    height: 50px;
     border-bottom-right-radius: 100px;
-    font-size: 120%;
-    font-weight: bold;
-    margin: 0;
     padding: 10px 20px;
-    left: 0;
-    top: 81px;
     text-align: center;
     color: white;
-    z-index: 1000;
 }
+
 
 .container {
     background-color: rgb(209, 196, 196);
     border-radius: 10px;
     padding: 20px;
     width: 65%; 
-    max-width: calc(100% - 136px); /* Ajusta el ancho máximo según el margen izquierdo */
-    margin: 119px 0px -37px 136px; 
-    padding-right: 0px;
-    margin-top: 165px;
+    max-width: 1200px;
+    margin: 1%;
+    margin-left: 18%;
+    margin-bottom: 118px;
 }
 
 .btn_enviar {
@@ -55,10 +34,3 @@ body, html {
     width: 150px;
     border-radius: 20px;
 }
-
-footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-} 
