--- a/views/assets/css/perfil.css
+++ b/views/assets/css/perfil.css
@@ -6,18 +6,20 @@ body{
     margin-right: 5px;
  }
 
+ aside{
+    float: right;
+    width: 300px;
+    background-color: white;
+    margin-top: 20px;
+    border: 1px solid #D2D2D2;
+    box-sizing: border-box;
+ }
+
  .avatar-xxl {
      height: 7rem;
      width: 7rem;
  }
  
- .card {
-     margin-bottom: 20px;
-     -webkit-box-shadow: 0 2px 3px #eaedf2;
-     box-shadow: 0 2px 3px #eaedf2;
-     width: 922px;
- }
-
  .card-top{
     margin-top: 60px;
  }
@@ -44,4 +46,33 @@ body{
     background-color: #bcc9b8; 
     border: #bcc9b8;
     color: #827a6f;
+}
+
+@media (min-width: 768px) {
+   .container-small {
+       width: 300px;
+   }
+   .container-large {
+       width: 970px;
+   } 
+} 
+@media (min-width: 992px) {
+   .container-small {
+       width: 500px;
+   }
+   .container-large {
+       width: 1170px;
+   } 
+} 
+@media (min-width: 1200px) {
+   .container-small {
+       width: 700px;
+   }
+   .container-large {
+       width: 1500px;
+   } 
+}
+
+.container-small, .container-large {
+   max-width: 100%;
 }
