Apartado de Creacion de Publicacion y Arreglos generales

--- a/views/assets/css/MultipleSelect.css
+++ b/views/assets/css/MultipleSelect.css
@@ -38,7 +38,7 @@ https://github.com/habibmhamadi/multi-select-tag
     padding: 0.1rem;
     align-items: center;
     /* Cambio color de Input, donde aparecen las etiquetas seleccionadas */
-    background-color: #c89c7d;
+    background-color: #e0c6b8;
 }
 
 .mult-select-tag .input-body {
