Cambios en el css de perfil
Cambios realizados en el apartado del css del perfil y remocion de la clase css de campanias

--- a/views/assets/css/perfil.css
+++ b/views/assets/css/perfil.css
@@ -64,3 +64,12 @@ body{
     margin: 10px 0 10px 0;
     margin-top: 15px;
     color: #000000 !important;
+}
+
+.CampaniasNav {
+    background-color: #8b9e8f;
+    color: white;
+    width: 28%;
+    border-bottom-right-radius: 45px;
+    height: 54px;
+}
