--- a/views/assets/css/Etiquetas.css
+++ b/views/assets/css/Etiquetas.css
@@ -27,13 +27,13 @@
 .EtiquetasAside {
     position: fixed;
     color: #827a6f;
-    top: 160px;
-    left: 80%;
+    top: 150px;
+    left: 85%;
     background: #ede6d3;
     padding: 30px 30px;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
-    width: 25%;
+    max-width: 15%;
     overflow: auto;
     margin: 0;
 }
@@ -47,7 +47,7 @@
     padding: 30px 30px 30px;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
-    width: 20%;
+    max-width: 20%;
     overflow: auto;
     z-index: 1;
 }
