--- a/views/assets/css/mainpage.css
+++ b/views/assets/css/mainpage.css
@@ -134,10 +134,10 @@
 }
 
 #myBtn {
-    display: block; /* Asegura que el botón esté visible */
-    position: fixed; /* Hace que el botón permanezca en la misma posición incluso al hacer scroll */
-    bottom: 5%; /* Ajusta la distancia desde el fondo de la pantalla, en este caso 20% de la altura de la pantalla */
-    right: 490px; /* Mantén el botón a 30px del borde derecho */
+    display: block;
+    position: fixed; 
+    bottom: 5%;
+    right: 490px; 
     z-index: 99; 
     font-size: 18px;
     border: none;
@@ -152,4 +152,11 @@
 
 #myBtn:hover {
     color: white;  
+}
+
+.rojo{
+    color:red;
+}
+.border{
+    border-radius: 100px;
 }
