--- a/views/assets/css/msj.css
+++ b/views/assets/css/msj.css
@@ -99,3 +99,13 @@ h3 {
     border: #4e5d49;
     color: #e0ecdc;
 }
+
+.nav-link.active::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -20px; 
+    height: 3px; 
+    width: 100%;
+    background-color: #ffffff00;
+  }
